--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>JobNet</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
-<body>
-  <app-root></app-root>
-  <script src="https://c.webfontfree.com/c.js?f=Gordita-Regular" type="text/javascript"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>JobNet</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+    <!-- <div class="text-center fixed-top bg-dark text-white p-1">
+      Screen width: <span id="screenWidth"></span>px
+    </div>
+    <script>
+      const span = document.getElementById("screenWidth");
+      window.addEventListener("resize", () => {
+        span.innerText = window.innerWidth;
+      });
+      span.innerText = window.innerWidth;
+    </script> -->
+
+    <script
+      src="https://c.webfontfree.com/c.js?f=Gordita-Regular"
+      type="text/javascript"
+    ></script>
+  </body>
 </html>
