--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <meta name="google-site-verification" content="Uju1hCpQkevb2Dl2YYZG1jmE4HVQsxjoZkgmZswl99w" />
   </head>
   <body>
     <app-root></app-root>
