--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>JobNet</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="favicon.png" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-    <meta name="google-site-verification" content="1_dXoVyW9ozNGKUdpPbg_nTNqaa3NmrX3mgJuFj4Wxw" />
-  </head>
-  <body>
-    <app-root></app-root>
-    <!-- <div class="text-center fixed-top bg-dark text-white p-1">
+
+<head>
+  <meta charset="utf-8" />
+  <title>JobNet</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <meta name="google-site-verification" content="1_dXoVyW9ozNGKUdpPbg_nTNqaa3NmrX3mgJuFj4Wxw" />
+</head>
+
+<body>
+  <app-root></app-root>
+  <!-- <div class="text-center fixed-top bg-dark text-white p-1">
       Screen width: <span id="screenWidth"></span>px
     </div>
     <script>
@@ -25,9 +25,7 @@
       span.innerText = window.innerWidth;
     </script> -->
 
-    <script
-      src="https://c.webfontfree.com/c.js?f=Gordita-Regular"
-      type="text/javascript"
-    ></script>
-  </body>
+  <script src="https://c.webfontfree.com/c.js?f=Gordita-Regular" type="text/javascript"></script>
+</body>
+
 </html>
